# Basic-CI-CD

./: .gitignore  .gitmodules  Makefile  Progress.md  README.md  RoadMap.md  TODO  Workflow.md  subject.txt
appflask/: .gitignore  Jenkinsfile  README.md  appflask.spec  hook-appflask.py  jenkins-config.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties  version.info
appflask/agent/: Dockerfile
appflask/appflask/: app.py  errors.py  init.py  limiter.py  metrics.py  routes.py
appflask/appflask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
appflask/argocd-apps/apps/: appflask-dev.yaml  appflask-prod.yaml
appflask/argocd-apps/helm/: README.md
appflask/argocd-apps/helm/appflask/: Chart.yaml  values-dev.yaml  values-prod.yaml
appflask/argocd-apps/helm/appflask/templates/: service.yaml
appflask/helm/appflask/: values.yaml
appflask/includes/: cicdUtils.groovy
appflask/jenkinsfile-includes/: cicdUtils.groovy
appflask/srcs/: requirements.txt
appflask/srcs/main/: limiter.py
appflask/test_scripts/: alert-testing-script.sh  comprehensive-rate-test.sh  test-prometheus-queries.sh  test_query.sh  test_rate_limit.sh
appflask/tests/: __init__.py  conftest.py  test_app.py  test_metrics.py  test_rate_limit.py
docs/: Infrastracture_architecture.md  STANDARD_CODE.md  how-to-use.md  technology & strategy.md
flask-app/: Dockerfile  Jenkinsfile  Makefile  README.md  README.old.md  RequestRateLimits.md  curl_test.sh  curl_test2.sh  hook-srcs.py  jenkins-config.yml  rate_limit_test.sh  (+1 more)
(+114 files in other folders)
